[project]
name = "tsunagi"
version = "0.1.1"
description = "SDK-first orchestration framework for AI pipelines and agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
# CRITICAL: Zero runtime dependencies. Python stdlib only.
dependencies = []
keywords = ["ai", "orchestration", "pipelines", "agents"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/runtakun/tsunagi"
Repository = "https://github.com/runtakun/tsunagi"


[project.optional-dependencies]
# All extras are opt-in
otel = ["opentelemetry-api>=1.20", "opentelemetry-sdk>=1.20"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.10",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tsunagi"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["arg-type"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "TCH"]
